--- a/static/style.css
+++ b/static/style.css
@@ -7,7 +7,7 @@ body {
 }
 
 h1 {
-    color: #6a0dad; /* color principal */
+    color: #6a0dad; /* color principal_TRALAREROTRALALA */
     text-align: center;
 }
 
